--- a/flask/templates/skills.html
+++ b/flask/templates/skills.html
@@ -8,7 +8,7 @@
 <div class="skill-box">
     <div class="skill-name"> {{ skill[0] }} </div>
     <div class="skill-progress"> 
-        <span data-width="{{ skill[1] }}" style="width: 0%; background-color: blue; height: 10px; display: block;"></span>
+        <span data-width="{{ skill[1] }}" style="width: 0%; background-color: rgb(130, 130, 228); height: 10px; display: block;"></span>
     </div>
 </div>
 {% endfor %}
